Fixed an issue with dynamic row generating, added custom scrollbar for chrome, smooth scrolling and fixed stuck focus issues on navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,12 @@ footer{
     color: #f2f2f2;
     padding-top: 9px;
     font-size: 32px;
+    transition: all .4s ease 0s;
 }
+
+#socialfooter a i:hover{
+    color: #e60000;
+}    
 
 /* Typography */
 
@@ -143,9 +148,14 @@ footer{
     transition: all .4s ease 0s;
 }
 
-.navbar-inverse .navbar-nav>li>a:focus, .navbar-inverse .navbar-nav>li>a:hover{
+.navbar-inverse .navbar-nav>li>a:hover{
     color: #e60000;
 }
+
+.navbar-inverse .navbar-nav>li>a:focus{
+    outline: none;
+}
+
 
 .navbar-inverse .navbar-brand {
     font-family: 'adamcg', sans-serif;
@@ -259,8 +269,13 @@ footer p{
         padding: 10px;
         text-align: center;
     }
+
     .navbar-nav>li>a {
         padding-left: 0;
+    }
+
+    .navbar-inverse .navbar-nav>li>a:hover{
+        color: #f2f2f2;
     }
 
     #banner{
@@ -279,4 +294,23 @@ footer p{
 
 
 }
+
+/* Credit to CSS-Tricks */
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgba(255,0,0,0.8); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
 
